--- a/ProyectoFinal_BilleteraVirtual/src/main/resources/co/edu/uniquindio/poo/proyectofinal_billeteravirtual/Bienvenida.fxml
+++ b/ProyectoFinal_BilleteraVirtual/src/main/resources/co/edu/uniquindio/poo/proyectofinal_billeteravirtual/Bienvenida.fxml
@@ -11,7 +11,7 @@
    <children>
       <ImageView fitHeight="772.0" fitWidth="1126.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="..\..\..\..\..\..\..\..\..\..\..\..\Universidad\Ing.Sistemas y computación\Cuarto semestre\Progra II\all.png" />
+            <Image url="Bienvenido.png" />
          </image>
       </ImageView>
       <Button fx:id="btnBienvenida" layoutX="500.0" layoutY="584.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="141.0" text="Ingresar" />
