--- a/ProyectoFinal_BilleteraVirtual/src/main/resources/co/edu/uniquindio/poo/proyectofinal_billeteravirtual/Registro.fxml
+++ b/ProyectoFinal_BilleteraVirtual/src/main/resources/co/edu/uniquindio/poo/proyectofinal_billeteravirtual/Registro.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fitHeight="707.0" fitWidth="1065.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../../../../../../../Downloads/all.png" />
+            <Image url="Registro.png" />
          </image>
       </ImageView>
       <Button fx:id="btnCrearCuenta" layoutX="482.0" layoutY="432.0" mnemonicParsing="false" text="Crear Cuenta" />
